tests/negative/comptime_loop_exceeded.far
comptime {
  i = 0
  while (i < 1000001) {
    i = i + 1
  }
}

fun main() -> i64 {
  return 0
}
